--- a/CSS/index.css
+++ b/CSS/index.css
@@ -42,6 +42,20 @@
     font-size: 15px;
     border-radius: 4px;
   }
+  .javascriptArrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+    margin: 5px;
+  }
+  .javascriptArrow img {
+    height: 12%;
+    width: 12%;
+  }
+  .javascriptArrow h2 {
+    padding: 15px;
+  }
   #mySkillsHeading {
     background-color: rgba(207, 186, 144, 0.233);
   }
@@ -136,3 +150,4 @@
         ;
     }
 }  
+
